// アカウントGoogleログインToken取得レスポンス
syntax = "proto3";

package api.admin;

import "account/adminAccountGoogleToken/admin_account_google_token.proto";

message AccountGetGoogleLoginTokenResponse {
  optional AdminAccountGoogleToken admin_account_google_token = 1;
}
