// アカウント
syntax = "proto3";

package api.admin;

import "account/account_get_google_login_url_request.proto";
import "account/account_get_google_login_url_response.proto";
import "account/account_get_google_login_token_request.proto";
import "account/account_get_google_login_token_response.proto";

service Account {
  rpc GetGoogleLoginUrl (AccountGetGoogleLoginUrlRequest) returns (AccountGetGoogleLoginUrlResponse);
  rpc GetGoogleLoginToken (AccountGetGoogleLoginTokenRequest) returns (AccountGetGoogleLoginTokenResponse);
}
